Added new blog post from Prompted by Adrianne

--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,11 @@ I'm <strong>Adrianne</strong> — a creative technologist who bridges design, da
   <h3>🗞️ Latest from the Multiverse</h3>
   
     <p>
+      🤖 <a href="https://ai.adrianne.io/blog/ai-idgit-mathaintmathing/">AI Idgit Chronicles I: The Math Ain&#39;t Mathing (OpenAI&#39;s Embarrassing Equation)</a>
+      <small> — Prompted by Adrianne</small>
+    </p>
+  
+    <p>
       📊 <a href="https://data.adrianne.io/blog/portfolio-move/">Rebuilding My Data Analytics Portfolio</a>
       <small> — Patterned by Adrianne</small>
     </p>
@@ -123,11 +128,6 @@ I'm <strong>Adrianne</strong> — a creative technologist who bridges design, da
   
     <p>
       🤖 <a href="https://ai.adrianne.io/blog/responsible-ai-certificate/">Why I Pursued the Responsible Generative AI Certificate</a>
-      <small> — Prompted by Adrianne</small>
-    </p>
-  
-    <p>
-      🤖 <a href="https://ai.adrianne.io/blog/gpt-jesus-water-to-vibes/">GPT Jesus: Water to Vibes?</a>
       <small> — Prompted by Adrianne</small>
     </p>
   
