Add resume page and update About section

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -63,6 +63,7 @@
     <article>
       <p class="prompt">&gt; system.log("about_portal.txt")</p>
 <p><strong>Portal by Adrianne</strong> is my professional hub — a central index to the projects, studies, and case work that reflect my identity as an <strong>Ethical Prompt Engineer, Data Analyst, and Creative Technologist</strong>.</p>
+<p>📄 <a href="/resume/">View my résumé →</a></p>
 <p>I integrate <strong>visual communication</strong> with <strong>rigorous analysis</strong> and <strong>responsible AI practice</strong>. My work focuses on:</p>
 <ul>
 <li>Designing intuitive, humane experiences and narratives</li>
