Added Credential Badges section with flex layout

--- a/public/credentials/index.html
+++ b/public/credentials/index.html
@@ -72,6 +72,16 @@
 </ul>
 <hr>
 <h2 id="-ai--prompt-engineering">🤖 AI &amp; Prompt Engineering</h2>
+<p><a href="https://coursera.org/share/59d6cbc7be6ada93d690b85b10d10302"><strong>Google AI Essentials Specialization</strong></a> - <a href="https://google.com"><em>Google</em></a> (<a href="https://coursera.org"><em>Coursera</em></a>) (2025)</p>
+<p><em><strong>Focus:</strong></em> Foundations of AI, which includes LLMs, prompt engineering basics, responsible AI, and staying up-to-date with AI developments.</p>
+<ul>
+<li><a href="https://coursera.org/share/81ffd85d3b34d853100f59298ea6609d">Introduction to AI</a></li>
+<li><a href="https://coursera.org/share/828ad7c9ebe959b95985aed144e66aaf">Maximize Productivity With AI Tools</a></li>
+<li><a href="https://coursera.org/share/0380b6c765ef18fc2e7a49a4004f181e">Discover the Art of Prompting</a></li>
+<li><a href="https://coursera.org/share/60eb4b99dc0b214d605ddeb8e7f2f6cc">Use AI Responsibly</a></li>
+<li><a href="https://coursera.org/share/d2def92df3efc092858a3fcfbe0477eb">Stay Ahead of the AI Curve</a></li>
+</ul>
+<hr>
 <p><a href="https://www.coursera.org/account/accomplishments/specialization/OQQM7554SFL4"><strong>Responsible Generative AI Specialization</strong></a> — <a href="https://online.umich.edu"><em>University of Michigan</em></a> (<a href="https://coursera.org"><em>Coursera</em></a>) (2025)</p>
 <p><em><strong>Focus:</strong></em> Ethics and responsibly developing, assessing, integrating, and governing generative AI for current and future roles.</p>
 <ul>
@@ -103,8 +113,8 @@
 </blockquote>
 <hr>
 <h2 id="-data-analytics">📊 Data Analytics</h2>
-<p><a href="https://www.credly.com/badges/d25280bc-0efa-4c68-b743-495ab3d361bc/public_url"><strong>Google Data Analytics Professional Certificate</strong></a> — <em>Google / Coursera</em> (2023, 2025)<br>
-<em><strong>Focus:</strong></em> Data cleaning, visualization, SQL, and R for analytics workflows.</p>
+<p><a href="https://www.credly.com/badges/d25280bc-0efa-4c68-b743-495ab3d361bc/public_url"><strong>Google Data Analytics Professional Certificate</strong></a> — <em>Google / Coursera</em> (2023, 2025)</p>
+<p><em><strong>Focus:</strong></em> Data cleaning, visualization, SQL, and R for analytics workflows.</p>
 <p>First earned in 2023; updated with version 2 in 2025.</p>
 <ul>
 <li><a href="https://coursera.org/share/af7c7478fa501ecb7c4f5a6666d5024c">Foundations: Data, Data, Everywhere</a></li>
@@ -123,6 +133,7 @@
 <li>🗂️ <a href="/certs/ap-wordpress-2015.pdf">WordPress</a> (2015, <em>archived</em>) — currently retaking updated course</li>
 <li>🐍 <a href="/certs/ap-python-2023.pdf">Python</a> (2023)</li>
 </ul>
+<hr>
 <p><strong>Sololearn Certificates</strong> — <em>Sololearn</em> (2021 – Present)</p>
 <ul>
 <li><a href="https://www.sololearn.com/certificates/CT-LVRHW7GT">HTML</a> (2021)</li>
@@ -130,10 +141,27 @@
 <li><a href="https://www.sololearn.com/certificates/CC-6LP8N5CH">PHP</a> (2025)</li>
 <li><a href="https://www.sololearn.com/certificates/CC-IF7OKTXL">Vibe Coding</a> (2025)</li>
 </ul>
+<hr>
 <p><strong>Codefinity Certifications</strong> - <a href="https://codefinity.com"><em>Codefinity</em></a> (2025 – Present)</p>
 <ul>
 <li><a href="/certs/ap-tailwindcss-2025.png">Tailwind CSS</a> (2025)</li>
 </ul>
+<hr>
+<p><a href="https://coursera.org/share/0560baf3dbe3016811b05c31f05da3cd"><strong>Introduction to Technical Writing</strong></a> - <a href="https://www.boardinfinity.com/"><em>Board Infinity</em></a> (<a href="https://coursera.org"><em>Coursera</em></a>) (2025)</p>
+<p><em><strong>Focus:</strong></em> Fundamentals of technical writing, documentation, and communication for developers and tech teams.</p>
+<hr>
+<h2 id="-credential-badges">🎖️ Credential Badges</h2>
+<div class="badge-row">
+  <a href="https://www.credly.com/badges/d25280bc-0efa-4c68-b743-495ab3d361bc">
+    <img src="/images/badges/google-data-analytics-professional-certificate-v2.png" alt="Google Data Analytics Professional Certificate">
+  </a>
+  <a href="https://certopus.com/c/8238e4e68c714516ad258311e858a6f6">
+    <img src="/images/badges/ma_da102023.png" alt="Merit America Data Analytics Badge">
+  </a>
+  <a href="https://www.credly.com/badges/2ba11714-f8c4-4f43-a689-92bfa55aff6f">
+    <img src="/images/badges/google-ai-essentials-v1.png" alt="Google AI Essentials Specialization">
+  </a>
+</div>
 <hr>
 <h2 id="-ongoing-learning">📚 Ongoing Learning</h2>
 <p class="prompt">&gt; system.log("ongoing_learning.txt")</p>
